[metadata]
name = ttouch
version = 0.1.0
author = Aleksa Ćuković
author_email = aleksacukovic1@gmail.com
description = Create files from templates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AleksaC/ttouch
license = MIT
license_file = LICENSE

[options]
py_modules = ttouch
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    ttouch = ttouch:main
